@@ -18,6 +18,8 @@ import uk.gov.hmcts.et.common.model.ccd.types.Organisation;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.EmailUtils;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
+import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
@@ -27,6 +29,7 @@ import java.util.UUID;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.spy;
@@ -49,7 +52,7 @@ class ServingServiceTest {
     private ArgumentCaptor<Map<String, Object>> personalisation;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() throws URISyntaxException, IOException {
         emailService = spy(new EmailUtils());
         caseDetails = generateCaseDetails();
         servingService = new ServingService(emailService);
@@ -74,7 +77,7 @@ class ServingServiceTest {
         notifyCaseData.setClaimant("Claimant LastName");
     }
 
-    private static CaseDetails generateCaseDetails() throws Exception {
+    private static CaseDetails generateCaseDetails() throws URISyntaxException, IOException {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(Thread.currentThread()
                 .getContextClassLoader().getResource("midServingCaseDetailsTest.json")).toURI())));
         ObjectMapper mapper = new ObjectMapper();
@@ -153,33 +156,30 @@ class ServingServiceTest {
     }
 
     @Test
-    void generateClaimantAndRespondentAddress() {
-        String expectedClaimantAndRespondentAddress = "**<big>Claimant</big>**<br/>Doris Johnson"
-                + "<br/>232 Petticoat Square<br/>22 House<br/>London<br/>W10 4AG<br/><br/>"
-                + "**<big>Respondent 1</big>**<br/>Antonio Vazquez"
-                + "<br/>11 Small Street<br/>22 House<br/>Manchester<br/>M12 42R<br/><br/>"
-                + "**<big>Respondent 2</big>**<br/>Juan Garcia<br/>12 Small Street<br/>24 House"
-                + "<br/>Manchester<br/>M12 4ED<br/><br/>";
+    void generateRespondentAddressList() {
+        String expectedRespondentAddresses = """
+                **<big>Respondent 1</big>**<br/>Antonio Vazquez\
+                <br/>11 Small Street<br/>22 House<br/>Manchester<br/>M12 42R<br/><br/>\
+                **<big>Respondent 2</big>**<br/>Juan Garcia<br/>12 Small Street<br/>24 House\
+                <br/>Manchester<br/>M12 4ED<br/><br/>""";
 
         CaseData caseData = caseDetails.getCaseData();
-        assertThat(servingService.generateClaimantAndRespondentAddress(caseData))
-            .isEqualTo(expectedClaimantAndRespondentAddress);
+        assertThat(servingService.generateRespondentAddressList(caseData))
+            .isEqualTo(expectedRespondentAddresses);
     }
 
     @Test
-    void generateClaimantAndRespondentAddressNoAddress() {
-        String expectedClaimantAndRespondentAddress = "**<big>Claimant</big>**<br/>Doris Johnson"
-                + "<br>Address not entered<br>"
-                + "**<big>Respondent 1</big>**<br/>Antonio Vazquez"
-                + "<br>Address not entered<br>"
-                + "**<big>Respondent 2</big>**<br/>Juan Garcia<br/>12 Small Street<br/>"
-                + "24 House<br/>Manchester<br/>M12 4ED<br/><br/>";
+    void generateRespondentAddressNoAddressList() {
+        String expectedRespondentAddresses = """
+                **<big>Respondent 1</big>**<br/>Antonio Vazquez\
+                <br>Address not entered<br>\
+                **<big>Respondent 2</big>**<br/>Juan Garcia<br/>12 Small Street<br/>\
+                24 House<br/>Manchester<br/>M12 4ED<br/><br/>""";
 
         CaseData caseData = caseDetails.getCaseData();
-        caseData.getClaimantType().setClaimantAddressUK(null);
-        caseData.getRespondentCollection().get(0).getValue().setRespondentAddress(null);
-        assertThat(servingService.generateClaimantAndRespondentAddress(caseData))
-                .isEqualTo(expectedClaimantAndRespondentAddress);
+        caseData.getRespondentCollection().getFirst().getValue().setRespondentAddress(null);
+        assertThat(servingService.generateRespondentAddressList(caseData))
+                .isEqualTo(expectedRespondentAddresses);
     }
 
     @Test
@@ -231,7 +231,7 @@ class ServingServiceTest {
         caseData.setServingDocumentCollection(List.of(documentTypeItem));
 
         servingService.addServingDocToDocumentCollection(caseData);
-        assertThat(caseData.getDocumentCollection().get(0).getValue().getTypeOfDocument()).isEqualTo(resultTypeOfDoc);
+        assertEquals(caseData.getDocumentCollection().getFirst().getValue().getTypeOfDocument(), resultTypeOfDoc);
     }
 
     private static Stream<Arguments> saveServingDocToDocumentCollectionParameter() {
